; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_do_map_w_branch.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_do_map_w_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@out = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_map_w_branch(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %4
  %13 = load i32, i32* %8, align 4
  %14 = call i64 @can_direct_write(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %12, %4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @emit_testimm(i32 %17, i32 1073741824)
  %19 = load i64, i64* @out, align 8
  %20 = trunc i64 %19 to i32
  %21 = load i32*, i32** %9, align 8
  store i32 %20, i32* %21, align 4
  %22 = call i32 @emit_jne(i32 0)
  br label %23

23:                                               ; preds = %16, %12
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i64 @can_direct_write(i32) #1

declare dso_local i32 @emit_testimm(i32, i32) #1

declare dso_local i32 @emit_jne(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
